--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -510,8 +510,8 @@
     <string name="option_lend_out_book">Půjčit knihu…</string>
     <string name="option_lend_return_book">Vypůjčená kniha je zpět</string>
     <string name="option_purge_bedetheque_authors_cache">Vymažte mezipaměť autorů Bedetheque</string>
-    <string name="option_rebuild_fts">Obnovit FTS</string>
-    <string name="option_rebuild_index">Znovu vytvořit index</string>
+    <string name="option_rebuild_fts">Obnovení dat fulltextového vyhledávání</string>
+    <string name="option_rebuild_index">Obnovení indexů</string>
     <string name="option_set_complete">Nastavit na „kompletní“</string>
     <string name="option_download_set_folder">Nastavte složku pro stahování</string>
     <string name="option_set_incomplete">Nastaveno na „neúplné“</string>
