--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -509,8 +509,8 @@
     <string name="option_lend_out_book">Prestar libro…</string>
     <string name="option_lend_return_book">El libro prestado esta de vuelta</string>
     <string name="option_purge_bedetheque_authors_cache">Borrar caché de autores de Bedetheque</string>
-    <string name="option_rebuild_fts">Reconstruir FTS</string>
-    <string name="option_rebuild_index">Reconstruir índice</string>
+    <string name="option_rebuild_fts">Reconstruir datos de búsqueda de texto completo</string>
+    <string name="option_rebuild_index">Reconstruir los índices</string>
     <string name="option_set_complete">Marcar como completo</string>
     <string name="option_download_set_folder">Establecer la carpeta de descarga</string>
     <string name="option_set_incomplete">Marcar como incompleto</string>
