--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -499,8 +499,8 @@
     <string name="option_lend_out_book">Prêter le livre…</string>
     <string name="option_lend_return_book">Le livre emprunté est de retour</string>
     <string name="option_purge_bedetheque_authors_cache">Preserve Bedetheque (french) format naming</string>
-    <string name="option_rebuild_fts">Re-construire FTS</string>
-    <string name="option_rebuild_index">Reconstruire l’index</string>
+    <string name="option_rebuild_fts">Reconstruire les données de recherche en texte intégral</string>
+    <string name="option_rebuild_index">Reconstruire les index</string>
     <string name="option_set_complete">Marquer comme complet</string>
     <string name="option_download_set_folder">Définissez le dossier de téléchargement</string>
     <string name="option_set_incomplete">Marquer comme incomplet</string>
