--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -533,8 +533,8 @@
     <string name="option_purge_bedetheque_authors_cache">Wis de cache van Bedetheque Authors</string>
     <string name="option_purge_files">Bestanden opschonen</string>
     <string name="option_purge_image_cache">Afbeeldingen cache wissen</string>
-    <string name="option_rebuild_fts">FTS opnieuw opbouwen</string>
-    <string name="option_rebuild_index">Index opnieuw opbouwen</string>
+    <string name="option_rebuild_fts">Volledige tekst zoekgegevens opnieuw opbouwen</string>
+    <string name="option_rebuild_index">Herbouw de indexen</string>
     <string name="option_select_all">Selecteer alles</string>
     <string name="option_select_none">Alles deselecteren</string>
     <string name="option_set_complete">Markeer als volledig</string>
