--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -53,7 +53,7 @@
     <string name="X_btn_customize">Anpassen…</string>
     <string name="X_btn_do_not_show_again">Nicht mehr anzeigen</string>
     <string name="X_btn_show_list">Liste anzeigen</string>
-    <string name="X_confirm_continue">Sind Sie sicher, dass Sie fortfahren möchten ?</string>
+    <string name="confirm_continue">Sind Sie sicher, dass Sie fortfahren möchten ?</string>
     <string name="X_error_authentication_failed">Authentifizierung fehlgeschlagen</string>
     <string name="X_error_download_failed">Herunterladen fehlgeschlagen</string>
     <string name="error_record_must_contain_column">Der Datensatz muss ein Feld namens „%1$s“ enthalten.</string>
