--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,7 +57,7 @@
     <string name="X_btn_customize">Personnaliser…</string>
     <string name="X_btn_do_not_show_again">Ne plus montrer</string>
     <string name="X_btn_show_list">Afficher la liste</string>
-    <string name="X_confirm_continue">Es-tu sur de vouloir continuer ?</string>
+    <string name="confirm_continue">Es-tu sur de vouloir continuer ?</string>
     <string name="X_error_authentication_failed">Authentification échouée</string>
     <string name="X_error_download_failed">Échec du téléchargement</string>
     <string name="error_record_must_contain_column">L’enregistrement doit contenir un champ nommé «%1$s».</string>
