--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -56,7 +56,7 @@
     <string name="X_btn_customize">Personalizza…</string>
     <string name="X_btn_do_not_show_again">Non mostrare più</string>
     <string name="X_btn_show_list">Mostra elenco</string>
-    <string name="X_confirm_continue">Sei sicuro di voler continuare ?</string>
+    <string name="confirm_continue">Sei sicuro di voler continuare ?</string>
     <string name="X_error_authentication_failed">Autenticazione fallita</string>
     <string name="X_error_download_failed">Scaricamento fallito</string>
     <string name="error_record_must_contain_column">Il record deve contenere un campo denominato %1$s.</string>
