--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -60,7 +60,7 @@
     <string name="X_btn_customize">Dostosuj…</string>
     <string name="X_btn_do_not_show_again">Nie pokazuj ponownie</string>
     <string name="X_btn_show_list">Pokaż listę</string>
-    <string name="X_confirm_continue">Jesteś pewien, że chcesz kontynuować ?</string>
+    <string name="confirm_continue">Jesteś pewien, że chcesz kontynuować ?</string>
     <string name="X_error_authentication_failed">Uwierzytelnianie nie powiodło się</string>
     <string name="X_error_download_failed">Pobieranie nie udane</string>
     <string name="error_record_must_contain_column">Rekord musi zawierać pole o nazwie „%1$s”.</string>
