--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -59,7 +59,7 @@
     <string name="X_btn_customize">Настроить…</string>
     <string name="X_btn_do_not_show_again">Больше не показывать</string>
     <string name="X_btn_show_list">Показать список</string>
-    <string name="X_confirm_continue">Вы уверены что хотите продолжить ?</string>
+    <string name="confirm_continue">Вы уверены что хотите продолжить ?</string>
     <string name="X_error_authentication_failed">Ошибка аутентификации</string>
     <string name="X_error_download_failed">Загрузка не удалась</string>
     <string name="error_record_must_contain_column">Запись должна содержать поле с именем «%1$s».</string>
