--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1551,12 +1551,12 @@
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET - Maintenance screen -->
     <string name="option_sync_deleted_book_records">Synchronize deleted books locally</string>
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET - Maintenance screen -->
-    <string name="info_sync_deleted_book_records">blah blah blah</string>
+    <string name="info_sync_deleted_book_records">This will check the cached list of deleted-books from a previous import from another device and synchronization those deletions. In other words, books flagged deleted on the other device will also be deleted on this device.</string>
 
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET - Maintenance screen -->
     <string name="option_clear_deleted_book_records">Clear the deleted books cache</string>
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET -->
-    <string name="info_clear_deleted_book_records">blah blah blah</string>
+    <string name="info_clear_deleted_book_records">This will clear the deleted books cache. No actual books will be deleted.</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
