--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -742,6 +742,6 @@
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
     <string name="lbl_original_title">Titolo originale</string>
     <string name="lbl_original_title_long">Titolo originale se il libro è una traduzione</string>
-    <string name="error_site_access_blocked">L\'accesso è stato bloccato dal sito web.</string>
+    <string name="error_site_access_blocked">L’accesso è stato bloccato dal sito web.</string>
     <string name="pt_scan_mode">Modalità di scansione</string>
 </resources>
