--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -757,4 +757,5 @@
     <string name="lbl_original_title_long">Tytuł oryginalny, jeśli książka jest tłumaczeniem</string>
     <string name="error_site_access_blocked">Dostęp został zablokowany przez stronę internetową.</string>
     <string name="pt_scan_mode">Tryb skanowania</string>
+    <string name="option_sync_deleted_book_records">Lokalna synchronizacja usuniętych książek</string>
 </resources>
