--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -754,4 +754,5 @@
     <string name="lbl_original_title_long">Оригинальное название, если эта книга является переводом</string>
     <string name="error_site_access_blocked">Доступ был заблокирован сайтом.</string>
     <string name="pt_scan_mode">Режим сканирования</string>
+    <string name="option_sync_deleted_book_records">Синхронизация удаленных книг локально</string>
 </resources>
