--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -742,4 +742,12 @@
     <string name="error_site_access_blocked">Der Zugang wurde von der Website blockiert.</string>
     <string name="pt_scan_mode">Modus des Scannens</string>
     <string name="option_sync_deleted_book_records">Gelöschte Bücher lokal synchronisieren</string>
+    <string name="site_description_dutch_catalogue">Niederländisch und mehr; Katalog</string>
+    <string name="site_description_dutch_catalogue_eu_comics">Niederländisch und mehr; Katalog; Europäische Comics</string>
+    <string name="site_description_dutch_shopping">Niederländisch und mehr; Einkaufen</string>
+    <string name="site_description_english_catalogue">Englisch und mehr; Katalog</string>
+    <string name="site_description_english_catalogue_FSF">Englisch und mehr; Katalog; Fantasy und Science Fiction</string>
+    <string name="site_description_french_catalogue_eu_comics">Französisch und mehr; Katalog; Europäische Comics</string>
+    <string name="site_description_general_shopping">Allgemein; Einkaufen</string>
+    <string name="site_description_portuguese_shopping">Portugiesisch und mehr; Einkaufen</string>
 </resources>
