--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -742,4 +742,12 @@
     <string name="error_site_access_blocked">De toegang werd geblokkeerd door de website.</string>
     <string name="pt_scan_mode">Scanmodus</string>
     <string name="option_sync_deleted_book_records">Verwijderde boeken lokaal synchroniseren</string>
+    <string name="site_description_dutch_catalogue">Nederlands en meer; Catalogus</string>
+    <string name="site_description_dutch_catalogue_eu_comics">Nederlands en meer; Catalogus; Europese Strips</string>
+    <string name="site_description_dutch_shopping">Nederlands en meer; Winkelen</string>
+    <string name="site_description_english_catalogue">Engels en meer; Catalogus</string>
+    <string name="site_description_english_catalogue_FSF">Engels en meer; Catalogus; Fantasy en Science Fiction</string>
+    <string name="site_description_french_catalogue_eu_comics">Frans en meer; Catalogus; Europese Strips</string>
+    <string name="site_description_general_shopping">Algemeen; Winkelen</string>
+    <string name="site_description_portuguese_shopping">Portugees en meer; Winkelen</string>
 </resources>
