--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -359,6 +359,23 @@
      Some functionality is limited to the ISFDB web site only.
      This is displayed at the 'end' of a label, hence needs the brackets for clarity. -->
     <string name="info_isfdb_warning_limited_to">(only supported by the ISFDB web site)</string>
+
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_dutch_catalogue">Dutch and more; Catalogue</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_dutch_catalogue_eu_comics">Dutch and more; Catalogue; European Comics</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_dutch_shopping">Dutch and more; Shop</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_english_catalogue">English and more; Catalogue</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_english_catalogue_FSF">English and more; Catalogue; Fantasy and Science Fiction</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_french_catalogue_eu_comics">French and more; Catalogue; European Comics</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_general_shopping">General; Shop</string>
+    <!-- website info: languages; type; specifics. -->
+    <string name="site_description_portuguese_shopping">Portuguese and more; Shop</string>
     <!-- endregion -->
     <!-- region ========== Tips which are shown in some places on how to use a screen. -->
     <string name="tip_dialog_title">Tip</string>
@@ -1548,32 +1565,14 @@
 
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
          Maintenance screen -->
-    <string name="info_sync_deleted_book_records">This will check the cached list of deleted-books from a previous import from another device and synchronization those deletions. In other words, books flagged deleted on the other device will also be deleted on this device.</string>
+    <string name="info_sync_deleted_book_records">This will check the deleted-books history from a previous import from another device and synchronization those deletions. In other words, books deleted on the other device will also be deleted on this device.</string>
 
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
          Maintenance screen -->
-    <string name="option_clear_deleted_book_records">Clear the deleted books cache</string>
+    <string name="option_clear_deleted_book_records">Clear the deleted books history</string>
     <!-- TEMPORARY STRING, DO NOT TRANSLATE YET.
          Maintenance screen -->
-    <string name="info_clear_deleted_book_records">This will clear the deleted books cache. No actual books will be deleted.</string>
-
-
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_dutch_catalogue">Dutch and more; Catalogue</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_dutch_catalogue_eu_comics">Dutch and more; Catalogue; European Comics</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_dutch_shopping">Dutch and more; Shopping</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_english_catalogue">English and more; Catalogue</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_english_catalogue_FSF">English and more; Catalogue; Fantasy and Science Fiction</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_french_catalogue_eu_comics">French and more; Catalogue; European Comics</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_general_shopping">General; Shopping</string>
-    <!-- website info: languages; type; specifics. -->
-    <string name="site_description_portuguese_shopping">Portuguese and more; Shopping</string>
+    <string name="info_clear_deleted_book_records">This will clear the deleted books history. No actual books will be deleted.</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
